--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NextJS / React / Typescript / eslint / prettie / stylelint",
   "main": "index.js",
   "scripts": {
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -19,6 +20,7 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.16.7",
     "@next/eslint-plugin-next": "^12.1.4",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
